<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xlmns="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xlmns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_gameoverview"
        android:orderInCategory="1"
        android:title="@string/game_overview"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/about_catan_spinner"
        app:showAsAction="never" />
</menu>
