<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_backArrow"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    android:src="@drawable/back_arrow_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="56dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/game_overview"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- #1 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="1" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_1" />

        </LinearLayout>

        <!-- #2 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="2" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_2" />

        </LinearLayout>

        <!-- #3 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="3" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_3" />

        </LinearLayout>

        <!-- #4 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="4" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_4" />

        </LinearLayout>

        <!-- #5 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="5" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_5" />

        </LinearLayout>

        <!-- #6 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="6" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_6" />

        </LinearLayout>

        <!-- #7 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="7" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_7" />

        </LinearLayout>

        <!-- #8 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="8" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_8" />

        </LinearLayout>

        <!-- #9 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="9" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_9" />

        </LinearLayout>

        <!-- #10 Text -->
        <LinearLayout style="@style/GOPointsLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="10" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_10" />

        </LinearLayout>

        <!-- #11 Text -->
        <LinearLayout
            style="@style/GOPointsLayout"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        style="@style/PointsTheme"
                        android:text="11" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <View style="@style/DividerViewStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/GameOverviewTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_11" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
